# Copyright 2010-2017 Free Software Foundation, Inc.
# This Makefile.am is free software; the Free Software Foundation
# gives unlimited permission to copy and/or distribute it,
# with or without modifications, as long as this notice is preserved.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY, to the extent permitted by law; without
# even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE.


dist_doc_DATA = FAQ.html

info_TEXINFOS = mpfr.texi

mpfr_TEXINFOS = fdl.texi

MAKEINFOFLAGS = --enable-encoding
